[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.black]
line-length = 88
fast = true
safe = false
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  #| foo.py           # also separately exclude a file named foo.py in
  #                   # the root of the project
)
'''

[tool.pytest.ini_options]
filterwarnings = [
  'ignore::DeprecationWarning:monai',
  'ignore::DeprecationWarning:docker',
] 
