[metadata]
name = pitn
author = Tyler Spears
author_email = tylera117@gmail.com
description = Pain in the Net - Using machine learning and MRI to advance pain therapy.
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: pitn.__version__
url = https://github.com/TylerSpears/pitn
keywords =
    mri
    diffusion mri
    biomedical
    image processing
    deep learning
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Topic :: Scientific/Engineering
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Operating System :: POSIX :: Linux
  Natural Language :: English
  Topic :: Scientific/Engineering :: Image Processing
  Topic :: Scientific/Engineering :: Medical Science Apps.
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
    numpy>=1.2
    pytorch>=1.8
    torchvision>=0.11
    matplotlib>=3.4
    scipy>=1.5
    scikit-image>=1.18
    nibabel>=3.2
    dipy>=1.4
    einops>=0.3
    torchio>=0.18
    addict>=2.4
    monai>=0.7
    piq>=0.6
